we are team motherfcka

--- a/src/js/templates/my-library.hbs
+++ b/src/js/templates/my-library.hbs
@@ -1,8 +1,10 @@
 {{#each this}}
-<li class="my-library__item" data-id="{{id}}">
-    <a href="#" class="movie-link" data-id="{{id}}">
-        <img class="my-library__movie-poster" src="{{this.poster_path}}"
+<li   class="my-library__item" data-id="{{id}}">
+    <a href="#" class="movie-link"  data-id="{{id}}">
+        <img  class="my-library__movie-poster" src="{{this.poster_path}}"
             alt="{{title}} {{name}}" data-id="{{id}}">
+        <div data-open="film" data-id="{{id}}" class="show-movie-card-buttons">
+        </div>
         <p class="my-library__movie-title" data-id="{{id}}">{{title}} {{name}}</br>
             <span class="my-library__movie-info">{{genre_ids}} | {{first_air_date}} {{release_date}}</span>
             <span class="my-library__movie-rate">{{vote_average}}</span>
