sardaryan somwehre there

--- a/src/js/templates/modal-footer-markup.hbs
+++ b/src/js/templates/modal-footer-markup.hbs
@@ -38,7 +38,7 @@
                 <ul class="modal-team-item-teammates">
                     <li class="modal-team-item-teammate-name">Людмила Гавриш</li>
                     <li class="modal-team-item-teammate-name">Галина Прокопив</li>
-                    <li class="modal-team-item-teammate-name">Карина Сарданян</li>
+                    <li class="modal-team-item-teammate-name">Карина Сардарян</li>
                 </ul>
             </div>
             <p class="footer-modal-teammates-description">
@@ -46,4 +46,5 @@
             </p>
         </li>
     </ul>
+    <img src="https://gifyu.com/image/UPhi" alt="hamster">
 </div>
