--- a/src/sass/layouts/_switchTheme.scss
+++ b/src/sass/layouts/_switchTheme.scss
@@ -56,6 +56,8 @@ body.dark-theme {
   text-align: center;
 }
 .theme-switch__toggle {
+  font-size: 1em;
+
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 0.75em;
   box-shadow: 0.125em 0.125em 0 0.125em rgba(0, 0, 0, 0.3) inset;
@@ -70,6 +72,8 @@ body.dark-theme {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+
+  transform: rotate(270deg);
 }
 .theme-switch__toggle:before,
 .theme-switch__toggle:after {
