added button remove

--- a/src/sass/layouts/_modal-film-markup.scss
+++ b/src/sass/layouts/_modal-film-markup.scss
@@ -344,3 +344,29 @@
     }
   }
 }
+
+// ==============================================================================
+
+.btn-remove-movie {
+  margin-left: 15px;
+  background: #fff;
+
+  border-radius: 5px;
+  border: 1px solid black;
+  transition: background var(--animation-duration) var(--timing-function),
+    color var(--animation-duration) var(--timing-function),
+    border var(--animation-duration) var(--timing-function);
+}
+
+.btn-remove-movie:hover,
+.btn-remove-movie:focus {
+  background: #ff6b08;
+  color: #fff;
+  border: 1px solid transparent;
+  cursor: pointer;
+}
+
+/* Icon size */
+button span[class='material-icons'] {
+  font-size: 24px;
+}
