--- a/src/sass/layouts/_modal-film-markup.scss
+++ b/src/sass/layouts/_modal-film-markup.scss
@@ -348,7 +348,10 @@
 // ==============================================================================
 
 .btn-remove-movie {
-  margin-left: 15px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  // margin-left: 15px;
   background: #fff;
 
   border-radius: 5px;
