--- a/src/js/templates/modal-film-markup.hbs
+++ b/src/js/templates/modal-film-markup.hbs
@@ -36,8 +36,8 @@
             
         </div>
         <div class="modal-meta_similar-movies">
-            <h3>Similar Movies</h3>
-            <ul class="modal-meta_similar-movies-list film-list js-ul-film"></ul>
+            <h3 class="similar-title">Similar Movies</h3>
+            <ul class="modal-meta_similar-movies-list film-list js-ul-film "></ul>
         </div>
     </div>
 </div>
