--- a/src/sass/layouts/_modal-film-markup.scss
+++ b/src/sass/layouts/_modal-film-markup.scss
@@ -330,17 +330,29 @@
   // Similar
   .modal-meta_similar-movies {
     padding-top: 20px;
-  }
 
-  .modal-meta_similar-movies h3 {
-    padding-bottom: 10px;
+    & .similar-title {
+      margin-bottom: 18px;
+    }
   }
 
   .modal-meta_similar-movies .film-list-li {
     width: 78px;
 
+    & .movie-link {
+      cursor: initial;
+    }
+
     @media screen and (max-width: 767px) {
       width: 100%;
+    }
+  }
+
+  .modal-meta_similar-movies-list {
+    justify-content: start;
+
+    & li {
+      margin-right: 15px;
     }
   }
 }
