from now we can talk ro each other^^

--- a/src/main.scss
+++ b/src/main.scss
@@ -17,3 +17,4 @@
 @import './sass/layouts/switchTheme';
 @import './sass/layouts/submitBtn';
 // @import './sass/layouts/tui-pagination';
+@import './sass/layouts/vue-style';
