--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -2,6 +2,7 @@
 .footer-container {
   padding-left: 20px;
   padding-right: 20px;
+  background-color: $footer-background-color;
 }
 .footer-section {
   padding-top: 28.71px;
