--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -39,7 +39,11 @@
 }
 
 .nav-item:not(:last-child) {
-  margin-right: 39px;
+  margin-right: 20px;
+
+  @media screen and (min-width: 768px) {
+    margin-right: 39px;
+  }
 }
 
 .link.current {
